Fixed pip install syntax.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ python:
     - "3.4"
 install:
     - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then
-          pip install functools32
-          pip install py2-ipaddress
-          pip install pytz
+          pip install functools32;
+          pip install py2-ipaddress;
+          pip install pytz;
       fi
     - pip install doctest-ignore-unicode
 script: nosetests
